vegan glutenfree sugarfree

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 									<p>Never the same<br />
 									always delicious</p>
 								</header>
+								<p>All our products are vegan, gluten-free, and free of refined sugar.</p>
 								<p>Products can be ordered by contacting us on <a href="https://www.instagram.com/ediblejoy.co/">Instagram</a> or by email to info@ediblejoy.co.</p>
 								<p>You can also <a href="#contact">contact us</a> from this website.</p>
 							</div>
