--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</ul>
 							<div class="inner">
 								<header>
-									<h2>Products</h2>
+									<h2>Order</h2>
 									<p>Never the same<br />
 									always delicious</p>
 								</header>
