--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<header>
 									<h2>Contact</h2>
 								</header>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xwkwngzp">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -116,7 +116,7 @@
 										<textarea name="message" id="message" rows="5"></textarea>
 									</div>
 									<ul class="actions">
-										<li><a href="" class="button submit">Send Message</a></li>
+										<li><button type="submit" class="button submit">Send Message</button></li>
 									</ul>
 								</form>
 							</div>
