add gift box to order page

--- a/index.html
+++ b/index.html
@@ -82,8 +82,24 @@
 									<p>Never the same<br />
 									always delicious</p>
 								</header>
-								<p>All our products are vegan, gluten-free, and free of refined sugar.</p>
-								<p>Products can be ordered by contacting us on <a href="https://www.instagram.com/ediblejoy.co/">Instagram</a> or by email to info@ediblejoy.co.</p>
+								<h3>Holiday Special: The Christmas Goodie Gift Box</h3>
+								<h4>320 DKK</h4>
+								<p>Prepared with love & the intention to bring euphoria to anyone who enjoys it.
+								<br /><br />
+								The Christmas Goodie Gift Box includes:
+								<ul>
+									<li>2 raw marzipan & nougat bars</li>
+									<li>1 jar raw Nut'ella</li>
+									<li>2 ceremonial cacao chocolate bars with pistachios and strawberries</li>
+									<li>2 raw snowballs with coconut</li>
+									<li>2 ceremonial cacao drink-on-a-stick</li>
+								</ul>
+								Total weight: 470 gr
+								</p>
+								<p>All products are vegan, gluten-free, and free of refined sugar.</p>
+								<p>Gift Box orders will be delivered between 18 - 22 December.</p>
+								
+								<p>The Christmas Goodie Gift Box and other products can be ordered by contacting us on <a href="https://www.instagram.com/ediblejoy.co/">Instagram</a> or by email to info@ediblejoy.co.</p>
 								<p>You can also <a href="#contact">contact us</a> from this website.</p>
 							</div>
 						</div>
